--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,12 @@
   padding: 0;
   font-family: sans-serif;
 }
+
+.App .person-view {
+  list-style: none;
+  padding: 16px;
+  margin: auto;
+  width: 75%;
+    border: 1px solid #eee;
+    text-align: center;
+}
